--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |type, message| %>
-  <div class="alert alert-success alert-<%= alert_type type %>">
+  <div class="alert alert-<%= alert_type type %>">
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     <%= message %>
   </div>
