--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,7 @@
           </a>
         </li>
         <li>
-          <%= link_to user_registration_path, method: :DELETE do %>
+          <%= link_to destroy_user_session_path, method: :DELETE do %>
             <span class="glyphicon glyphicon-log-out"></span>
             Logout
           <% end %>
