--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active">
-        <%= link_to "Home", root_url %>
+        <%= link_to "Chat Rooms", root_url %>
       </li>
       <li>
         <%= link_to "Page 1", "#" %>
