--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,10 +7,10 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active">
-        <%= link_to "Chat Rooms", root_url %>
+        <%= link_to "Chat Rooms", root_path %>
       </li>
       <li>
-        <%= link_to "Page 1", "#" %>
+        <%= link_to "Create Chat Room", new_chat_room_path %>
       </li>
       <li>
         <%= link_to "Page 2", "#" %>
