add_chat_rooms#show

--- a/app/views/chat_rooms/_chat_room.html.erb
+++ b/app/views/chat_rooms/_chat_room.html.erb
@@ -2,5 +2,5 @@
   <td><%= chat_room.id %></td>
   <td><%= chat_room.owner.name %></td>
   <td><%= chat_room.name %></td>
-  <td><%= link_to "Join chat room", "#", class: "btn btn-primary"%></td>
+  <td><%= link_to "Join chat room", chat_room, class: "btn btn-primary"%></td>
 </tr>
