--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -25,6 +25,7 @@
             <% end %>
           <% end %>
         </div>
+
         <div class="type_msg">
           <div class="input_msg_write">
             <input type="text" class="write_msg" placeholder="Type a message" />
@@ -33,7 +34,15 @@
         </div>
       </div>
     </div>
-    
   </div>
 </div>
-  
+
+<script type="text/javascript">
+  $(document).on('ready', function() {
+    $('.msg_history').animate({
+        scrollTop: $('.msg_history').get(0).scrollHeight
+      },
+      'fast'
+    );
+  });
+</script>
