--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -28,12 +28,13 @@
 
         <div class="type_msg">
           <div class="input_msg_write">
-            <input type="text" class="write_msg" placeholder="Type a message" />
-            <button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+            <input type="text" class="write_msg js-message-content" placeholder="Type a message" />
+            <button class="msg_send_btn js-btn-send-message" type="button">
+              <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+            </button>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
