--- a/app/views/chat_rooms/_chat_room_with_newest_message.html.erb
+++ b/app/views/chat_rooms/_chat_room_with_newest_message.html.erb
@@ -1,4 +1,4 @@
-<%= link_to chat_room, class: "chat_list #{ active_chat_room chat_room.id, current_chat_room_id }" do %>
+<%= link_to chat_room, class: "chat_list js-message-chat-room-#{chat_room.id}" do %>
   <div class="chat_people">
     <div class="chat_img">
       <% user = message.try(:user) || chat_room.owner %>
