--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -9,7 +9,7 @@
           </div>
         </div>
 
-        <div class="inbox_chat">
+        <div class="js-inbox_chat  inbox_chat">
           <% @chat_rooms.each do |chat_room| %>
             <%= render "chat_rooms/chat_room_with_newest_message", chat_room: chat_room,
               message: chat_room.messages.last, current_chat_room_id: @chat_room.id %>
